--- a/haste-standalone.cabal
+++ b/haste-standalone.cabal
@@ -25,13 +25,11 @@ library
     OverloadedStrings,
     CPP
   build-depends:
-    base >=4.8 && <5
-  if impl(haste)
+    base >=4.8 && <5,
+    haste-lib >= 0.6 && < 0.7,
+    haste-app >= 0.1 && < 0.2
+  if !impl(haste)
     build-depends:
-      haste-lib >= 0.5 && < 0.6
-  else
-    build-depends:
-      haste-compiler >= 0.5 && <0.6,
       text           >=1.2  && <1.3,
       http-types     >=0.9  && <0.10,
       wai            >=3.2  && <3.3,
